# MPE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cpm_install.json
CMake/Platform/Dependencies/: dependencies_platform.cmake
CMake/Platform/GlobalDependencies/: global_dependencies_platform.cmake
CMake/Platform/Other/: CMakeLists.txt
CMake/Platform/Source/: source_platform.cmake  source_platform_editor.cmake  source_platform_mpe.cmake
CMake/Source/: editor_source.cmake  mpe_source.cmake  source.cmake
CMake/Utilities/: generate_version_headers.cmake  get_git_info.cmake  utilities.cmake
CROSSCOMPILE_EXMP/: CMakeLists.txt  PI.cmake
DUMMY/: main.cpp
Documentation/: MPE_Doxyfile  QUICK_SETUP.md
Documentation/MPE/html/: ___c_o_r_e_8h.html  ___c_o_r_e_8h__dep__incl.dot  ___c_o_r_e_8h__dep__incl.map  ___c_o_r_e_8h__dep__incl.md5  ___c_o_r_e_8h__incl.map  ___c_o_r_e_8h__incl.md5  ___c_o_r_e_8h_source.html  ___c_w_d_8h.html  ___c_w_d_8h__dep__incl.map  ___c_w_d_8h__dep__incl.md5  ___c_w_d_8h__incl.map  ___c_w_d_8h__incl.md5  ___c_w_d_8h_source.html  ___p_r_o_f_i_l_i_n_g_8cpp.html  ___p_r_o_f_i_l_i_n_g_8cpp__incl.map  ___p_r_o_f_i_l_i_n_g_8cpp__incl.md5  ___p_r_o_f_i_l_i_n_g_8h.html  ___p_r_o_f_i_l_i_n_g_8h__dep__incl.map  ___p_r_o_f_i_l_i_n_g_8h__dep__incl.md5  ___p_r_o_f_i_l_i_n_g_8h__incl.map  ___p_r_o_f_i_l_i_n_g_8h__incl.md5  ___p_r_o_f_i_l_i_n_g_8h_source.html  ___t_i_m_e_r_8h.html  ___t_i_m_e_r_8h__dep__incl.map  ___t_i_m_e_r_8h__dep__incl.md5  ___t_i_m_e_r_8h__incl.dot  ___t_i_m_e_r_8h__incl.map  (+154 more)
Documentation/SETUP/: OSX.md  RPI.md  RPI4.md  UNIX.md  WINDOWS.md
Editor/: Editor.cpp  EditorSource.cpp  EditorSource.h  MPEECS.h  MPEEDITOR.h
MPE/: EntryPoint.h  MPE.h  MPEECS.h  MPEEDITOR.h  MPEGFX_OPEN_GL.h  MPEGFX_OPEN_GL_ES.h  MPEPCH.h  MPEPLAT.h  MPE_GFX_OPEN_GL.h  MPE_GFX_OPEN_GLES.h  main.cpp
MPE/App/: App.cpp  App.h  Window.cpp  Window.h  WindowProps.cpp  WindowProps.h
MPE/Core/: GlobalLog.cpp  GlobalLog.h  Log.cpp  Log.h  _ASSERTS.h  _CORE.h  _CWD.h  _INIT.h  _PTRS.cpp  _PTRS.h  _VERSION.h.in
MPE/Errors/: Error.cpp  Error.h  Errors.h
MPE/Events/: Event.h  EventApp.cpp  EventApp.h  EventFunction.cpp  EventFunction.h  EventGraphics.cpp  EventGraphics.h  EventKey.cpp  EventKey.h  EventMouse.cpp  EventMouse.h
MPE/Input/: Input.h  KeyCodes.h  KeyState.cpp  KeyState.h  MouseButtonCodes.h
MPE/Log/: GlobalLog.cpp  GlobalLog.h  Log.cpp  Log.h
MPE/Profiling/: _PROFILING.cpp  _PROFILING.h  _TIMER.h
MPE/Renderer/: GraphicalContext.h  GraphicalContextProps.h  RenderPrimitive.cpp  RenderPrimitive.h  RenderSettings.cpp  RenderSettings.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererUtilities.cpp  RendererUtilities.h
MPE/Sound/: OpenALContext.cpp  OpenALContext.h  SoundPlayer.cpp  SoundPlayer.h
MPE/Test/: Test.cpp  Test.h
MPE/Time/: Time.cpp  Time.h
Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLContextProps.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLSettings.cpp  OpenGLSettings.h
Platform/OpenGLES/: OpenGLESContext.cpp  OpenGLESContext.h  OpenGLESRendererAPI.cpp  OpenGLESRendererAPI.h  OpenGLESSettings.cpp  OpenGLESSettings.h
PlatformSpecific/RBP/: toolchain.cmake
PrimitiveEditor/ECS/: ECS.h
PrimitiveEditor/Grid/: Grid.h
PrimitiveEditor/ObjectHierarchy/: ObjectHierarchy.cpp  ObjectHierarchy.h
PrimitiveEditor/Objects/: Cube.cpp
PrimitiveEditor/PropertyViewer/: Properties.h
PrimitiveEditor/Scene/: Scene.cpp  Scene.h
Projects/: CMakeLists.txt  projects.cmake
Projects/AngleTest/: angletest.cmake  eglTest.cpp  eglTest.mm  gles2.cpp  gles2.mm  gles3.cpp  gles3.mm
Projects/DUMMY/: CMakeLists.txt  dummy.cmake  main.cpp
Projects/FreeType/: ProjectPicker.cpp  freetype.cmake  main.cpp  main_osx.cpp
Projects/FreeType/Data/Shaders/3.2/: vs.glsl
Projects/FreeType/Data/Shaders/OpenGL/: Text.glsl
Projects/OpenAL/: main.cpp  openal.cmake
Projects/OpenCVTest/: CMakeLists.txt  OpenCVTest.cpp  opencvtest.cmake
Projects/Pong/: ProjectSelector.cpp  pong.cmake
Projects/Pong/Data/Textures/: Ball.psd
Projects/Pong/source/: Pong.cpp  Pong.h
Projects/Pong/source/Core/: Ball.cpp  Ball.h  Game.cpp  Game.h  Player.cpp  Player.h  _INCLUDE.h
Projects/ProjectPicker/: ProjectPicker.cpp  projectpicker.cmake
Projects/ProjectPicker/Tests/: ClearColorTest.cpp  ClearColorTest.h  ColorAnimationTriangleTest.cpp  ColorAnimationTriangleTest.h  ColorTriangleTest.cpp  ColorTriangleTest.h  CubeAbstractionTest.cpp  CubeAbstractionTest.h  GeneralTest.cpp  GeneralTest.h  GeneralTestLayer.cpp  GeneralTestLayer.h  GridTest.cpp  GridTest.h  MultiCubeTest.cpp  MultiCubeTest.h  NativeTextTest.cpp  NativeTextTest.h  ObjectHierarchyTest.cpp  ObjectHierarchyTest.h  PBRTest.cpp  PBRTest.h  PropertyViewerTest.cpp  PropertyViewerTest.h  RectangleTransformationTest.cpp  RectangleTransformationTest.h  SceneTest.cpp  SceneTest.h  SimpleAudioTest.cpp  SimpleAudioTest.h  SimpleCubeTest.cpp  SimpleCubeTest.h  SimpleEcsTest.cpp  SimpleEcsTest.h  SimpleLightingTest.cpp  SimpleLightingTest.h  SimplePerspectiveCameraTest.cpp  SimplePerspectiveCameraTest.h  SimpleRectangleTest.cpp  SimpleRectangleTest.h  (+12 more)
Projects/Sandbox/: Example.cpp  Sandbox.cpp  sandbox.cmake
Projects/Sandbox/Data/Shaders/: ColoredTexture.glsl
Projects/Sandbox/Sandbox2D/: Sandbox2D.cpp  Sandbox2D.h
Tests/: CMakeLists.txt
Tests/MPE/: CMakeLists.txt
Tests/MPE/Core/Logging/: CMakeLists.txt  LogTest.cpp
Tests/MPE/Core/Time/: CMakeLists.txt  TimeTest.cpp
Utility/: .clang-format  .dirs_to_format  open_docs.bat
Utility/Debug/: parse_profile_ms.py
Utility/Linux/: format_source.sh  get_vendor.sh  setup_angle.sh
Utility/RPI/: .gitignore  README.md  get_vendor.sh  partition-rpi.ps1  setup_angle.sh  setup_rpi.sh  start-rpi.ps1  start_gui.ps1  start_gui.sh  start_headless.ps1  start_headless.sh
Utility/Windows/: format_source.bat  generate_docs.bat  get_vendor.bat  open_vs.bat  setup_angle.bat  setup_angle.ps1
Utility/macOS/: generate_xcode_project.sh  get_vendor.sh  setup_angle.sh
(+555 files in other folders)
